--- a/src/FizzyLogic/package.json
+++ b/src/FizzyLogic/package.json
@@ -12,7 +12,8 @@
     "gulp": "^4.0.2",
     "gulp-sass": "^4.1.0",
     "node-sass": "^5.0.0",
-    "yargs-parser": ">=13.1.2"
+    "yargs-parser": ">=13.1.2",
+    "trim-newlines": ">=3.0.1"
   },
   "dependencies": {
     "@toast-ui/editor": "^2.5.1",
